--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ erl_crash.dump
 #env files 
 .env
 
+#deepgram
+SETUP_DEEPGRAM.md
+
 # Ignore package tarball (built via "mix hex.build").
 boba_talkie-*.tar
 
